--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".LoginSetup.SignUpActivity">
+    tools:context=".LoginSetup.ForgotPassword">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,29 +19,27 @@
             android:layout_height="wrap_content">
 
             <ImageButton
+                android:onClick="goToBack"
                 android:id="@+id/imageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#FFFFFF"
-                android:onClick="goback"
                 android:padding="5dp"
                 android:scaleType="centerCrop"
                 android:tint="#000000"
                 app:srcCompat="@drawable/backarrow" />
-
             <View
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="#D8D1D1" />
-
+                android:background="#D8D1D1"/>
             <TextView
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center"
-                android:layout_marginLeft="10dp"
-                android:text="Sign Up"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_gravity="center_vertical|center"
+                android:text="Reset Password"/>
 
         </LinearLayout>
 
@@ -50,126 +49,79 @@
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="140dp"
             android:layout_marginEnd="0dp"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/college" />
 
         <com.google.android.material.textfield.TextInputLayout
-
-
-            android:id="@+id/email"
+            android:id="@+id/resetemail"
 
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="0dp"
-            android:hint="Enter email"
+            android:hint="Enter reset email"
             app:startIconDrawable="@drawable/email"
             app:startIconTint="@color/black">
 
             <!--this is the actual edit text which takes the input-->
             <com.google.android.material.textfield.TextInputEditText
-
+                android:id="@+id/edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password"
-
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="0dp"
-            android:hint="Enter password"
-            app:passwordToggleEnabled="true"
-            app:startIconDrawable="@drawable/pass"
-            app:startIconTint="@color/black">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textPassword" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordrepeat"
-
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="0dp"
-            android:hint="Confirm password"
-            app:passwordToggleEnabled="true"
-            app:startIconDrawable="@drawable/pass"
-            app:startIconTint="@color/black">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textPassword" />
-
-        </com.google.android.material.textfield.TextInputLayout>
 
 
         <android.widget.Button
+            android:onClick="sendverificationlink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="0dp"
             android:background="@drawable/button_background"
-            android:onClick="SignUpClicked"
-            android:text="Sign Up"
+            android:text="Send Verification Link"
             android:textColor="@color/white" />
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="100dp">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Not registered yet?"
                 android:layout_marginRight="4dp"
-                android:text="You already have an account?"
                 android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:gravity="left|center"
-                android:onClick="MoveToLoginScreen"
-                android:paddingLeft="4dp"
-                android:text="Log In"
-                android:textAllCaps="false"
                 android:textColor="@color/black"
+
+                android:text="Sign Up"
+                android:paddingLeft="4dp"
+                android:textAllCaps="false"
+                android:gravity="left|center"
+                android:shadowColor="@color/white"
                 android:textSize="18sp" />
 
 
         </LinearLayout>
 
     </LinearLayout>
+
 </ScrollView>
