--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".LoginActivity">
-
+    tools:context=".LoginSetup.LoginActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<ProgressBar
+    android:id="@+id/progress"
+    android:progressTint="@color/colorPrimaryDark"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_centerInParent="true"
+    android:visibility="invisible"
+    />
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -54,7 +65,7 @@
             app:srcCompat="@drawable/college" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/filledTextField"
+            android:id="@+id/email"
 
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 
@@ -77,7 +88,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordTextField"
+            android:id="@+id/password"
 
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 
@@ -94,7 +105,7 @@
 
             <!--this is the actual edit text which takes the input-->
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -105,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:onClick="MoveToSignUpScreen"
+            android:onClick="MoveToForgetPassword"
             android:shadowColor="@color/white"
             android:text="Forgot password?"
             android:textAllCaps="false"
@@ -121,6 +132,7 @@
             android:layout_marginEnd="0dp"
             android:background="@drawable/button_background"
             android:text="Log In"
+            android:onClick="login"
             android:textColor="@color/white" />
 
 
@@ -144,7 +156,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-
                 android:text="Sign Up"
                 android:paddingLeft="4dp"
                 android:textAllCaps="false"
@@ -156,5 +167,6 @@
         </LinearLayout>
 
     </LinearLayout>
+    </RelativeLayout>
 
 </ScrollView>
