--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -80,7 +80,7 @@
 
 
         <android.widget.Button
-            android:onClick="sendverificationlink"
+            android:onClick="sendVerificationlink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
